移除brotlipy依赖，更新fire到0.2.1解决报错。

--- a/Pipfile
+++ b/Pipfile
@@ -16,12 +16,11 @@ records = "*"
 tldextract = "*"
 exrex = "*"
 aiohttp = "*"
-fire = "*"
+fire = "==0.2.1"
 fake-useragent = "*"
 bs4 = "*"
 cchardet = "*"
 lxml = "*"
-brotlipy = "*"
 pysocks = "*"
 
 [requires]
