--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install -r requirements.txt
 
 script:
- - coverage run tests/test_example.py
+ - coverage run oneforall/example.py
 
 after_success:
  - codecov
