添加cloudscraper和Js2Py依赖

--- a/Pipfile
+++ b/Pipfile
@@ -16,11 +16,13 @@ records = "*"
 tldextract = "*"
 exrex = "*"
 aiohttp = "*"
-fire = "==0.2.1"
+fire = "*"
 bs4 = "*"
 cchardet = "*"
 lxml = "*"
 pysocks = "*"
+cloudscraper = "*"
+js2py = "*"
 
 [requires]
 python_version = "3.7"
