--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install coverage
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
@@ -25,10 +24,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pytest
+#     - name: Test with pytest
+#       run: |
+#       pip install pytest
+#       pytest
     - name: Test with example
       run: |
+        pip install coverage
         coverage run oneforall/example.py
