--- a/Pipfile
+++ b/Pipfile
@@ -17,13 +17,12 @@ exrex = "*"
 aiohttp = "*"
 fire = "*"
 bs4 = "*"
-cchardet = "*"
 lxml = "*"
 pysocks = "*"
 cloudscraper = "*"
 js2py = "*"
 tablib = "*"
-brotlipy = "*"
+brotli = "*"
 
 [requires]
 python_version = "3.8"
