--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
         - choco install python
         - python -m pip install --upgrade pip
         - chcp.com 65001
+        - export PYTHONIOENCODING=UTF-8
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 
 install:
