将test.py放到主目录

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
     - name: Test with example
       run: |
         pip install coverage
-        coverage run test/example.py
+        coverage run test.py
