--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ install:
   - pip3 install -r requirements.txt
 
 script:
- - coverage run test/example.py
+ - coverage run test.py
 
 after_success:
  - codecov
