--- a/Pipfile
+++ b/Pipfile
@@ -9,15 +9,12 @@ verify_ssl = true
 tqdm = "*"
 loguru = "*"
 dnspython = "*"
-requests = "*"
-records = "*"
+requests = {extras = ["socks"],version = "*"}
 tldextract = "*"
 exrex = "*"
 fire = "*"
 bs4 = "*"
-pysocks = "*"
 cloudscraper = "*"
-tablib = "*"
 tenacity = "*"
 treelib = "*"
 
