--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,27 @@
+-i https://mirrors.aliyun.com/pypi/simple/
 beautifulsoup4==4.9.1
 bs4==0.0.1
 certifi==2020.6.20
 chardet==3.0.4
 cloudscraper==1.2.46
-colorama==0.4.3
+colorama==0.4.3 ; sys_platform == 'win32'
 dnspython==2.0.0
-docopt==0.6.2
-et-xmlfile==1.0.1
 exrex==0.10.5
 fire==0.3.1
 future==0.18.2
 idna==2.10
-jdcal==1.4.1
 loguru==0.5.1
-openpyxl==2.4.11
 pyparsing==2.4.7
-PySocks==1.7.1
-records==0.5.3
-requests==2.24.0
+pysocks==1.7.1
 requests-file==1.5.1
 requests-toolbelt==0.9.1
+requests[socks]==2.24.0
 six==1.15.0
 soupsieve==2.0.1
-SQLAlchemy==1.3.19
-tablib==2.0.0
 tenacity==6.2.0
 termcolor==1.1.0
 tldextract==2.2.3
 tqdm==4.48.2
 treelib==1.6.1
 urllib3==1.25.10
-win32-setctime==1.0.1
+win32-setctime==1.0.1 ; sys_platform == 'win32'
