--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ requests-toolbelt==0.9.1
 requests[socks]==2.24.0
 six==1.15.0
 soupsieve==2.0.1
+sqlalchemy==1.3.19
 tenacity==6.2.0
 termcolor==1.1.0
 tldextract==2.2.3
