--- a/.travis.yml
+++ b/.travis.yml
@@ -11,36 +11,67 @@ matrix:
       python: 3.6           # this works for Linux but is ignored on macOS or Windows
       before_install:
         - pip3 install -U pip
-        - pip3 install -U uvloop
     - name: "Python 3.7 on Xenial Linux"
       python: 3.7           # this works for Linux but is ignored on macOS or Windows
       dist: xenial          # required for Python >= 3.7
       before_install:
         - pip3 install -U pip
-        - pip3 install -U uvloop
     - name: "Python 3.8 on Xenial Linux"
       python: 3.8-dev           # this works for Linux but is ignored on macOS or Windows
       dist: xenial          # required for Python >= 3.7
       before_install:
         - pip3 install -U pip
-        - pip3 install -U uvloop
+    - name: "Python 3.9 on Xenial Linux"
+        python: 3.9-dev           # this works for Linux but is ignored on macOS or Windows
+        dist: xenial          # required for Python >= 3.7
+        before_install:
+          - pip3 install -U pip
     - name: "Python 3.7 on macOS"
       os: osx
       osx_image: xcode10.2  # Python 3.7 running on macOS 10.14.3
       language: shell       # 'language: python' is an error on Travis CI macOS
       before_install:
         - pip3 install -U pip
-        - pip3 install -U uvloop
+    - name: "Python 3.6 on Windows"
+        os: windows
+        language: shell
+        before_install:
+          - choco install python --version 3.6
+          - python -m pip install --upgrade pip
+          - chcp.com 65001
+        env:
+          - PATH=/c/Python36:/c/Python36/Scripts:$PATH
+          - PYTHONIOENCODING=UTF-8
+    - name: "Python 3.7 on Windows"
+        os: windows
+        language: shell
+        before_install:
+          - choco install python --version 3.7
+          - python -m pip install --upgrade pip
+          - chcp.com 65001
+        env:
+          - PATH=/c/Python37:/c/Python37/Scripts:$PATH
+          - PYTHONIOENCODING=UTF-8
     - name: "Python 3.8 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell
       before_install:
-        - choco install python
+        - choco install python --version 3.7
         - python -m pip install --upgrade pip
         - chcp.com 65001
       env: 
         - PATH=/c/Python38:/c/Python38/Scripts:$PATH
         - PYTHONIOENCODING=UTF-8
+    - name: "Python 3.9 on Windows"
+        os: windows           # Windows 10.0.17134 N/A Build 17134
+        language: shell
+        before_install:
+          - choco install python --version 3.9
+          - python -m pip install --upgrade pip
+          - chcp.com 65001
+        env:
+          - PATH=/c/Python39:/c/Python39/Scripts:$PATH
+          - PYTHONIOENCODING=UTF-8
 
 install:
   - pip3 install codecov
