--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
 -i https://mirrors.aliyun.com/pypi/simple/
 beautifulsoup4==4.9.3
 bs4==0.0.1
-certifi==2020.6.20
-chardet==3.0.4
-colorama==0.4.4; sys_platform == 'win32'
+certifi==2020.12.5
+chardet==4.0.0
+colorama==0.4.4 ; sys_platform == 'win32'
 dnspython==2.0.0
 exrex==0.10.5
 fire==0.3.1
-future==0.18.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+future==0.18.2
+idna==2.10
 loguru==0.5.3
 pysocks==1.7.1
-requests==2.24.0
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-soupsieve==2.0.1; python_version >= '3.0'
-sqlalchemy==1.3.20
-tenacity==6.2.0
+requests==2.25.1
+six==1.15.0
+soupsieve==2.1 ; python_version >= '3.0'
+sqlalchemy==1.3.22
+tenacity==6.3.1
 termcolor==1.1.0
-tqdm==4.51.0
+tqdm==4.55.0
 treelib==1.6.1
-urllib3==1.25.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-win32-setctime==1.0.3; sys_platform == 'win32'
+urllib3==1.26.2
+win32-setctime==1.0.3 ; sys_platform == 'win32'
