--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,22 @@
--i https://mirrors.aliyun.com/pypi/simple/
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2020.12.5
 chardet==4.0.0
-colorama==0.4.4 ; sys_platform == 'win32'
+colorama==0.4.4
 dnspython==2.1.0
 exrex==0.10.5
 fire==0.4.0
 future==0.18.2
-greenlet==1.0.0 ; python_version >= '3'
 idna==2.10
 loguru==0.5.3
-pysocks==1.7.1
+PySocks==1.7.1
 requests==2.25.1
 six==1.15.0
-soupsieve==2.2.1 ; python_version >= '3.0'
-sqlalchemy==1.4.5
+soupsieve==2.2.1
+SQLAlchemy==1.3.22
 tenacity==7.0.0
 termcolor==1.1.0
 tqdm==4.59.0
 treelib==1.6.1
 urllib3==1.26.4
-win32-setctime==1.0.3 ; sys_platform == 'win32'
+win32-setctime==1.0.3
