--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 jobs:
 
   build:
-    name: build
+    name: build and push
     runs-on: ubuntu-latest
 
     steps:
@@ -29,4 +29,4 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_PASS }}
     
     - name: Build the Docker image
-      run: docker buildx build --push --platform linux/amd64,linux/arm64 -t tardis07/oneforall:latest .
+      run: docker buildx build --push --platform linux/amd64,linux/arm64 -t shimlylty/oneforall:latest .
